microk8s/traefik/cyberchef.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cyberchef
  namespace: cyberchef
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  tls:
    secretName: cyberchef-hackinglab-kubes-cert
  routes:
    - match: Host(`cyberchef.hackinglab.kubes`)
      kind: Rule
      services:
        - name: cyberchef
          port: 8000

---
apiVersion: v1
kind: Pod
metadata:
  name: cyberchef
  namespace: cyberchef
  labels:
    app: cyberchef
spec:
  containers:
    - name: cyberchef
      image: mpepping/cyberchef:latest
      ports:
        - containerPort: 8000
      resources:
        limits:
          memory: 100Mi
          cpu: "1"
        requests:
          memory: 10Mi
          cpu: "0.2"

---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: cyberchef
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: cyberchef
  type: ClusterIP
